Fix jumping Editionseinheiten list

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -330,7 +330,7 @@ $color-terms: #b5221f;*/
       }
       .form-control {
         margin: 0;
-        height: auto;
+        height: auto !important;
       }
     }
   }
